--- a/app/src/main/res/layout/fragment_home_nav.xml
+++ b/app/src/main/res/layout/fragment_home_nav.xml
@@ -29,7 +29,7 @@
         <com.androidkun.xtablayout.XTabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             app:xTabBackgroundColor="@color/bg_tab"
             app:xTabMode="scrollable"
             app:xTabIndicatorColor="#ffa015"
