--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -1,66 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_toolbar_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/bg_list"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:orientation="horizontal">
-
-    <Button
-        android:id = "@+id/toolbar_love"
-        android:layout_width="30dp"
-        android:layout_height="22dp"
-        android:layout_weight="1.0"
-        android:drawableLeft="@mipmap/zan"
-        android:background="@drawable/selector_button"
-        android:gravity="center_vertical"
-        android:drawablePadding="12dp"
-        android:textColor="#999999"
-        android:textSize="10sp"
-        android:text="10"/>
-
-    <Button
-        android:id = "@+id/toolbar_fav"
-        android:layout_width="30dp"
-        android:layout_height="22dp"
-        android:layout_weight="1.0"
-        android:drawableLeft="@mipmap/shoucang"
-        android:background="@drawable/selector_button"
-        android:gravity="center_vertical"
-        android:drawablePadding="12dp"
-        android:textColor="#999999"
-        android:textSize="10sp"
-        android:text="10"/>
+    android:paddingRight="16dp">
 
 
-    <Button
-        android:id = "@+id/toolbar_share"
-        android:layout_width="30dp"
-        android:layout_height="22dp"
-        android:layout_weight="1.0"
-        android:drawableLeft="@mipmap/fenxiang"
-        android:background="@drawable/selector_button"
-        android:gravity="center_vertical"
-        android:drawablePadding="12dp"
-        android:textColor="#999999"
-        android:textSize="10sp"
-        android:text="10"/>
+
+    <LinearLayout
+        android:id = "@+id/toolbar_love_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id = "@+id/toolbar_love_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/zan"/>
+
+        <TextView
+            android:id = "@+id/toolbar_love_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#999999"
+            android:textSize="12sp"
+            android:text="100"/>
 
 
-    <Button
-        android:id = "@+id/toolbar_comment"
-        android:layout_width="30dp"
-        android:layout_height="22dp"
-        android:layout_weight="1.0"
-        android:drawableLeft="@mipmap/pinglun"
-        android:background="@drawable/selector_button"
-        android:gravity="center_vertical"
-        android:drawablePadding="12dp"
-        android:textColor="#999999"
-        android:textSize="10sp"
-        android:text="10"/>
+    </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:id = "@+id/toolbar_fav_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id = "@+id/toolbar_fav_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/shoucang"/>
+
+        <TextView
+            android:id = "@+id/toolbar_fav_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#999999"
+            android:textSize="12sp"
+            android:text="100"/>
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id = "@+id/toolbar_share_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id = "@+id/toolbar_share_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/fenxiang"/>
+
+        <TextView
+            android:id = "@+id/toolbar_share_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#999999"
+            android:textSize="12sp"
+            android:text="100"/>
+
+
+    </LinearLayout>
+
+
+
+
+
+
+
+    <LinearLayout
+        android:id = "@+id/toolbar_comment_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id = "@+id/toolbar_comment_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/pinglun"/>
+
+        <TextView
+            android:id = "@+id/toolbar_comment_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#999999"
+            android:textSize="12sp"
+            android:text="100"/>
+
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
