--- a/app/src/main/res/layout/include_user_feed.xml
+++ b/app/src/main/res/layout/include_user_feed.xml
@@ -4,14 +4,13 @@
     android:id="@+id/item_user_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bg_list"
     android:paddingLeft="16dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/user_avatar"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:src="@mipmap/user_default"/>
@@ -22,8 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:paddingLeft="12dp"
-        android:textSize="12sp"
-        android:textColor="#999999"
+        android:textSize="14sp"
+        android:textColor="#333333"
+        android:textStyle="bold"
         android:ellipsize="end"
         android:text="昵称"/>
 
