--- a/app/src/main/res/layout/item_detail_header.xml
+++ b/app/src/main/res/layout/item_detail_header.xml
@@ -2,25 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bg_list"
+    android:background="#f0f0f0"
+    android:paddingTop="16dp"
     android:orientation="vertical">
-    <include
-        android:id="@+id/item_user"
-        layout="@layout/include_user_vertical_mini" />
+
+
+    <LinearLayout
+        android:id="@+id/item_user_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/user_avatar"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/user_default"/>
+
+        <TextView
+            android:id="@+id/user_nickname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="12dp"
+            android:textSize="14sp"
+            android:textColor="#333333"
+            android:textStyle="bold"
+            android:ellipsize="end"
+            android:text="昵称"/>
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/detail_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#ffffff"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textColor="#333333"
         android:ellipsize="end"
         android:lineSpacingExtra="8dp"
         android:lineSpacingMultiplier="1"
         android:text="内容"/>
-    <include
-        android:id="@+id/detail_space"
-        layout="@layout/include_space_detail_user" />
+
+
+
 </LinearLayout>
