--- a/app/src/main/res/layout/item_video_comment.xml
+++ b/app/src/main/res/layout/item_video_comment.xml
@@ -3,17 +3,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bg_list"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
+    android:background="#f0f0f0"
     android:orientation="vertical" >
 
-    <include
-        android:id="@+id/item_comment"
-        layout="@layout/include_comment" />
+    <LinearLayout
+        android:id="@+id/item_user_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/user_avatar"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/user_default"/>
+
+        <TextView
+            android:id="@+id/user_nickname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="12dp"
+            android:textSize="12sp"
+            android:textColor="#ffa015"
+            android:ellipsize="end"
+            android:text="昵称"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/comment_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#333333"
+        android:paddingLeft="60dp"
+        android:paddingBottom="12dp"
+        android:ellipsize="end"
+        android:layout_gravity="clip_vertical"
+        android:text="内容"/>
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@drawable/bg_space"/>
+        android:layout_height="2dp"
+        android:layout_marginLeft="60dp"
+        android:background="#e6e6e6"/>
 </LinearLayout>
