--- a/app/src/main/res/layout/layout_toolbar_detail.xml
+++ b/app/src/main/res/layout/layout_toolbar_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:minHeight="?attr/actionBarSize"
-    android:background="@color/bg_tab"
+    android:background="#ffffff"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
