--- a/app/src/main/res/layout/layout_toolbar_msg.xml
+++ b/app/src/main/res/layout/layout_toolbar_msg.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:minHeight="?attr/actionBarSize"
-    android:background="@color/bg_tab">
+    android:background="#ffffff">
 
     <TextView
         android:id="@+id/toolbar_title"
