List列表工具按钮点击区域放大

--- a/app/src/main/res/layout/activity_pic.xml
+++ b/app/src/main/res/layout/activity_pic.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/zan"/>
+            android:src="@mipmap/zan1"/>
 
         <ImageView
             android:id = "@+id/toolbar_fav_image"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/shoucang"/>
+            android:src="@mipmap/shoucang1"/>
 
 
         <ImageView
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/fenxiang"/>
+            android:src="@mipmap/fenxiang1"/>
 
 
 
