--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/zan"/>
+            android:src="@mipmap/zan1"/>
 
         <ImageView
             android:id = "@+id/toolbar_fav_image"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/shoucang"/>
+            android:src="@mipmap/shoucang1"/>
 
 
         <ImageView
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/fenxiang"/>
+            android:src="@mipmap/fenxiang1"/>
 
 
 
