--- a/app/src/main/res/layout/fragment_explore_nav.xml
+++ b/app/src/main/res/layout/fragment_explore_nav.xml
@@ -54,6 +54,7 @@
                 android:orientation="vertical">
 
                 <Button
+                    android:id="@+id/user_income_more"
                     android:layout_width="100dp"
                     android:layout_height="34dp"
                     android:background="@drawable/shape_button_black"
