--- a/app/src/main/res/layout/item_feed_all.xml
+++ b/app/src/main/res/layout/item_feed_all.xml
@@ -57,9 +57,7 @@
             <ImageView
                 android:id="@+id/item_feed_rec_content_image"
                 android:layout_width="fill_parent"
-                android:layout_height="170dp"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY"/>
+                android:layout_height="170dp"/>
             <ImageView
                 android:id="@+id/item_feed_rec_content_play"
                 android:layout_width="fill_parent"
@@ -98,33 +96,74 @@
                 android:paddingTop="16dp"
                 android:paddingBottom="8dp">
 
-                <ImageView
-                    android:id = "@+id/toolbar_love_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/zan"/>
+                <LinearLayout
+                    android:id="@+id/toolbar_love_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-                <ImageView
-                    android:id = "@+id/toolbar_fav_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:src="@mipmap/shoucang"/>
+                    <ImageView
+                        android:id = "@+id/toolbar_love_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:src="@mipmap/zan"/>
 
-                <ImageView
-                    android:id = "@+id/toolbar_comment_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="80dp"
-                    android:src="@mipmap/pinglun"/>
+                </LinearLayout>
 
 
-                <ImageView
-                    android:id = "@+id/toolbar_share_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+
+                <LinearLayout
+                    android:id="@+id/toolbar_fav_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="50dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id = "@+id/toolbar_fav_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/shoucang"/>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/toolbar_comment_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="120dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id = "@+id/toolbar_comment_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/pinglun"/>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/toolbar_share_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentRight="true"
-                    android:src="@mipmap/fenxiang"/>
+                    android:orientation="vertical">
+
+
+                    <ImageView
+                        android:id = "@+id/toolbar_share_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:src="@mipmap/fenxiang"/>
+
+                </LinearLayout>
 
 
 
@@ -160,7 +199,7 @@
                     android:id = "@+id/toolbar_comment_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="66dp"
+                    android:layout_marginLeft="76dp"
                     android:textColor="#999999"
                     android:gravity="center"
                     android:textSize="12sp"
@@ -171,7 +210,7 @@
                     android:id = "@+id/toolbar_share_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="126dp"
+                    android:layout_marginLeft="136dp"
                     android:textColor="#999999"
                     android:gravity="center"
                     android:textSize="12sp"
