完成所有新增接口调试

--- a/app/src/main/res/layout/fragment_explore_nav.xml
+++ b/app/src/main/res/layout/fragment_explore_nav.xml
@@ -24,7 +24,16 @@
                 android:layout_height="120dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/chuansuo"/>
+                android:src="@mipmap/chuansuo"
+                android:visibility="gone"/>
+
+            <ImageView
+                android:id="@+id/explore_male"
+                android:layout_width="fill_parent"
+                android:layout_height="120dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/male"/>
 
             <TextView
                 android:layout_width="match_parent"
