--- a/app/src/main/res/drawable/style_edittext_cursor.xml
+++ b/app/src/main/res/drawable/style_edittext_cursor.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <size android:width="1dp" />
+    <size android:width="2dp" />
 
-    <solid android:color="#ed5861"  />
+    <solid android:color="#ffa015"  />
 
 </shape>
