--- a/app/src/main/res/layout/activity_pic.xml
+++ b/app/src/main/res/layout/activity_pic.xml
@@ -29,11 +29,11 @@
             android:id="@+id/toolbar_comment_image"
             android:layout_width="160dp"
             android:layout_height="34dp"
+            android:layout_marginLeft="16dp"
             android:background="@drawable/shape_edit"
             android:layout_weight="1"
             android:gravity="left|center_vertical"
-            android:text="随便说点"
-            android:paddingLeft="16dp"/>
+            android:text="我来评论..."/>
 
         <ImageView
             android:id = "@+id/toolbar_love_image"
