--- a/app/src/main/res/layout/item_detail_header.xml
+++ b/app/src/main/res/layout/item_detail_header.xml
@@ -13,7 +13,6 @@
         android:layout_height="wrap_content"
         android:background="#ffffff"
         android:paddingTop="16dp"
-        android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:orientation="horizontal">
 
@@ -45,11 +44,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
+        android:paddingTop="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:textSize="16sp"
         android:textColor="#333333"
         android:ellipsize="end"
+        android:textStyle="bold"
         android:lineSpacingExtra="8dp"
         android:lineSpacingMultiplier="1"
         android:text="内容"/>
