--- a/app/src/main/res/layout/layout_dialog_comment.xml
+++ b/app/src/main/res/layout/layout_dialog_comment.xml
@@ -5,26 +5,53 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/comment_edit_text"
+
+    <LinearLayout
+        android:id="@+id/toolbar_love_btn"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:paddingRight="40dp"
-        android:background="@drawable/shape_edit"
-        android:textCursorDrawable="@drawable/style_edittext_cursor"
-        android:textSize="12sp"
-        android:layout_marginRight="40dp"
-        android:hint="要不咱随便说点什么......"/>
+        android:paddingLeft="16dp"
+        android:paddingRight="56dp"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/comment_send"
+        <EditText
+            android:id="@+id/comment_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/shape_edit"
+            android:textCursorDrawable="@drawable/style_edittext_cursor"
+            android:textSize="12sp"
+            android:hint="我来评论..."/>
+
+
+    </LinearLayout>
+
+
+
+
+
+
+    <LinearLayout
+        android:id="@+id/toolbar_share_btn"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:paddingRight="16dp"
         android:layout_alignParentRight="true"
         android:gravity="center"
-        android:text="发送"
-        android:textColor="#ffa015"
-        android:textSize="14sp" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/comment_send"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="发送"
+            android:textColor="#ffa015"
+            android:textSize="14sp" />
+
+
+    </LinearLayout>
 
 
 
